--- a/src/.env.example
+++ b/src/.env.example
@@ -3,6 +3,7 @@ APP_NAME="Blog example"
 APP_URL="http://localhost:3000"
 APP_PORT=3000
 APP_DEBUG=debug
+APP_DEBUG_ENABLED=true
 APP_KEY="123456789"
 
 DB_HOST="mongodb://mongodb:27017/blog"
