--- a/src/package.json
+++ b/src/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "start": "node server.js",
     "test": "mocha test",
-    "integration-tests": "mocha tests/integration --recursive"
+    "integration-tests": "mocha tests/integration"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
-    "mongoose": "^5.5.5",
+    "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pm2": "^3.5.0",
     "winston": "^3.2.1"
   },
